# Contact_Manager_Project

./: 404.html  README.es.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  tests.yml
Contact_Manager/: exceptions.py  models.py  services.py  storage.py
architecture/: index.html
data/: data.json
docs/: architecture.md  getting_started.md  index.md  reference.md
docs/user_guide/: commands.md  persistence.md
getting_started/: index.html
reference/: index.html
search/: search_index.json
src/Contact_Manager/: services.py
tests/: test_models.py  test_services.py
user_guide/commands/: index.html
user_guide/persistence/: index.html
